Fix wrapping of content in Pathauto pattern table

--- a/sass/wwm_adminimal.scss
+++ b/sass/wwm_adminimal.scss
@@ -1487,3 +1487,9 @@ input[type=radio] {
     overflow: unset !important;
   }
 }
+
+form#pathauto-pattern-list {
+  td:nth-child(2) {
+    word-break: break-word;
+  }
+}
